# alumet-agent-template

./: .gitignore  Cargo.toml  README.md
agent-example/: Cargo.toml
agent-example/src/: main.rs
plugin-42/: Cargo.toml
plugin-42/src/: lib.rs
src/: main.rs
